--- a/styles.css
+++ b/styles.css
@@ -498,24 +498,42 @@ footer{
 }
 
 .music-container{
+    position: relative;
     gap: 0.5rem;
     display: flex;
     align-items: center;
 }
 
 .music-icon-container{
-    
-    height: 2.5rem;
-    
+    height: 3.31rem;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 0.25rem;
 }
 
+.popout{
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 100%;
+    transform: translateX(-30px);
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
+}
+
+.music-container.active .popout {
+    opacity: 1;
+    transform: translateX(0);
+    pointer-events: auto;
+}
+
+
 .bar{
     border-radius: 1rem;
-    width: 0.3rem;
+    width: 0.67rem;
     background-color: white;
 }
 
@@ -533,26 +551,23 @@ footer{
 }
 
 .icon{
-    width: 3rem;
-    height: 3rem;
-}
-
-.icon:hover{
-    cursor: pointer;
+    width: 3.31rem;
+    height: 3.31rem;
+    cursor: pointer; 
 }
 
 
 .play{
-    background-image: url(./assets/play.svg);
+    background-image: url(play.svg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
 }
 
 .sound-icon{
-    height: 2.5rem;
     width: 2.5rem;
-    background-image: url(./assets/sound-level-two.svg);
+    height: 2.5rem;
+    background-image: url(sound-level-two.svg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
