--- a/styles.css
+++ b/styles.css
@@ -317,15 +317,88 @@ main{
     justify-content: space-around;
 
 }
-#alerts-options select{
-    height: 3rem;
+.select-btn{
     background-color: transparent;
-    border: solid;
+    border: solid 1px white;
+    width: 10.18rem;
+    height: 4rem;
     color: white;
     border-radius: 0.5rem;
-    text-align: center;
-    font-size: 1.5rem;
+    cursor: pointer;
+    font-size: 2rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap:1rem ;
 }
+
+.caret{
+    pointer-events: none;
+    width: 1rem;
+    height: 1rem;
+    border-bottom: solid 2px white;
+    border-right:  solid 2px white ;
+    transform: rotate(45deg);
+    margin-bottom: 1rem;
+    transition: transform 150ms ease-in-out, margin 150ms ease-in-out;
+}
+
+.dropdown.active .caret{
+    transform: rotate(-135deg);
+    margin-bottom: 0;
+    margin-top: 1rem;
+    
+} 
+
+
+.dropdown{
+    position: relative;
+}
+
+.dropdown-menu{
+    z-index: 2;
+    box-sizing: border-box;
+    
+    width: 10.18rem;
+    position: absolute;
+    color: white;
+    left: 0;
+    top: calc(100% + 1rem);
+    background-color: #6F6E6E;
+    border: 1px solid white;
+    border-radius: 0.5rem;
+    opacity: 0;
+    pointer-events: none;
+    transform: translateY(-10px);
+    transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
+}
+
+.dropdown-content{
+    padding: 0.75rem;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 4rem;
+    color: white;
+    background-color: transparent;
+    cursor: pointer;
+    border-radius: 0.5rem;
+}
+
+.dropdown-content.active{
+    background-color: #A3A3A3;
+    z-index: 3;
+}
+
+
+.dropdown.active > .select-btn + .dropdown-menu{
+    pointer-events: auto;
+    opacity: 1;
+    transform: translateY(0);
+}
+
 
 
 .row{
