--- a/styles.css
+++ b/styles.css
@@ -666,19 +666,37 @@ footer{
     border-radius: 1rem;
     width: 0.67rem;
     background-color: white;
-}
-
-#bar-one{
-    height: 85%;
-}
-#bar-two{
-    height: 70%;
-}
-#bar-three{
     height: 100%;
 }
-#bar-four{
-    height: 90%;
+
+.animate{
+    animation: animate 1s linear infinite;
+}
+
+@keyframes animate {
+    50%{
+        height: 70%;
+    }
+
+    100%{
+        height: 100%;
+    }
+}
+
+.bar:nth-child(1){
+    animation-delay: ;
+}
+
+.bar:nth-child(2){
+    animation-delay: 0.2s;
+}
+
+.bar:nth-child(3){
+    animation-delay: ;
+}
+
+.bar:nth-child(4){
+    animation-delay:0.2s ;
 }
 
 
