--- a/styles.css
+++ b/styles.css
@@ -669,13 +669,17 @@ footer{
     height: 100%;
 }
 
+.short{
+    height: 70%;
+}
+
 .animate{
     animation: animate 1s linear infinite;
 }
 
 @keyframes animate {
     50%{
-        height: 70%;
+        height: 60%;
     }
 
     100%{
@@ -683,17 +687,13 @@ footer{
     }
 }
 
-.bar:nth-child(1){
-    animation-delay: ;
-}
+
 
 .bar:nth-child(2){
     animation-delay: 0.2s;
 }
 
-.bar:nth-child(3){
-    animation-delay: ;
-}
+
 
 .bar:nth-child(4){
     animation-delay:0.2s ;
